--- a/cli/src/app/features/admin/course-management/course-management.component.html
+++ b/cli/src/app/features/admin/course-management/course-management.component.html
@@ -170,6 +170,7 @@
       (editCourse)="openEditModal($event)"
       (restoreCourse)="onRestoreCourse($event)"
       (deleteCourse)="onDeleteCourse($event)"
+      (statusChange)="onStatusChange($event)"
       (sortChange)="onSortChange($event)"
       (pageChange)="onPageChange($event)"
     ></app-course-list>
